--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "nprogress": "^0.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-placeholder": "^3.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-saga": "^0.2.6",
