--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "npm-run-all": "^4.1.3",
     "nprogress": "^0.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -18,9 +19,14 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "build-css": "less-watch-compiler --config lessconfig.json",
+    "watch-css": "less-watch-compiler --config lessconfig.json"
   }
 }
