--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "electron .",
-    "build-css": "less-watch-compiler --config lessconfig.json",
     "watch-css": "less-watch-compiler --config lessconfig.json"
   }
 }
